blue-green/gateway_v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-v2
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "v2.istio.com"
