blue-green/only_v1_route.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
  namespace: default
spec:
  gateways: 
  - bluegreen-gateway
  hosts:
  - "*"
  http:
  - match:
    - headers:
        version:
          exact: "v2"
    route:
    - destination:
        host: backend.default.svc.cluster.local
        subset: v2
        port:
          number: 80
      weight: 100
#  - match:
#    - sourceLabels:
#        app: frontend
#        version: v2
#    route:
#    - destination:
#        host: backend.default.svc.cluster.local
#        subset: v2
#        port:
#          number: 80
#      weight: 100
  - match:
    - {}
    route:
    - destination:
        host: backend.default.svc.cluster.local
        subset: v1
        port:
          number: 80
      weight: 100
    - destination:
        host: backend.default.svc.cluster.local
        subset: v2
        port:
          number: 80
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
spec:
  host: backend.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
