blue-green/only_v2_route.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-v2
  namespace: default
spec:
  gateways: 
  - gateway-v2
  hosts:
  - "v2.istio.com"
  http:
  - match:
    - {}
    route:
    - destination:
        host: backend.default.svc.cluster.local
        subset: v2
        port:
          number: 80
